# real-world-haskell

./: real-world-haskell.cabal
src/Testing/: Gen.hs  QuickCheckBasics.hs
src/Typeclasses/: DictionaryEq.hs  Eq.hs  Show.hs
