name:                real-world-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rpereira/real-world-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Afonso Pereira
maintainer:          ruiafonsopereira@gmail.com
copyright:           2017 Rui Afonso Pereira
category:            Teaching
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Testing.Gen
                       Testing.QuickCheckBasics
                       Typeclasses.DictionaryEq
                       Typeclasses.Eq
                       Typeclasses.Show
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/rpereira/real-world-haskell
